--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -213,24 +213,37 @@
 														<h2 th:text="#{label.comitato_scientifico}">Comitato Scientifico</h2>
 														<div class="clearfix"></div>
 													</div>
-													<div class="x_content col-xs-12">
-														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<div class="x_content">
+														<table id="comitato-table" class="datatable-responsive-componenti-comitato table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
-																	<th th:text="#{label.componenti_comitato_scientifico}">Componenti COmitato Scientifico</th>
-																	<th th:text="#{label.stato_inserimento}">Stato inserimento</th>
+																	<th th:text="#{label.componenti_comitato_scientifico}">Componenti Comitato Scientifico</th>
+																	<th th:text="#{label.nome}">Nome</th>
+																	<th th:text="#{label.cognome}"></th>																	
+																	<th th:text="#{label.rimuovi}">Rimuovi</th>
 																</tr>
 															</thead>
 															<tbody>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.responsabileSegreteria != null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/edit|}"></a></td>
-																	<td th:if="${accreditamentoWrapper.responsabileSegreteria == null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_SEGRETERIA|}"></a></td>
-																	
-																	<td	th:if="${accreditamentoWrapper.responsabileSegreteriaStato}">
-																		<span class="fa fa-check green"></span>
+																	<td th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}"><a th:text="#{label.coordinatore_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.coordinatoreComitatoScientifico.id}/edit|}"></a></td>
+																	<td th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}"><a th:text="#{label.coordinatore_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}"></a></td>
+																	<td	th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="${accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.nome}"></td>
+																	<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
+																	<td	th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="${accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.cognome}"></td>
+																	<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
+																	<td>
+																		<span class="fa fa-trash disabled"></span>
 																	</td>
-																	<td	th:unless="${accreditamentoWrapper.responsabileSegreteriaStato}">
-																		<span class="fa fa-remove red"></span>
+																</tr>
+																<tr th:each="componente, row : ${accreditamentoWrapper.componentiComitatoScientifico}">
+																	<td th:unless="${componente.new}"><a th:text="#{label.componente_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/edit|}"></a></td>
+																	<td th:if="${componente.new}"><a th:text="#{label.componente_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}"></a></td>
+																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.nome}"></td>
+																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
+																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.cognome}"></td>
+																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
+																	<td>
+																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/remove|}"><span class="fa fa-trash"></span></a>
 																	</td>
 																</tr>
 															</tbody>
@@ -242,7 +255,6 @@
 										<!--  /TAB 2 -->
 									</div>
 									<div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="tab3">
-										<p>
 										<!--  TAB 3 -->
 										<div class="row">
 											<div class="col-xs-12">
@@ -327,7 +339,6 @@
 											</div>
 										</div>
 										<!--  /TAB 3 -->
-										</p>
 									</div>
 								</div>
 							</div>
@@ -335,6 +346,21 @@
 					</div>
 				<!--  -->	
 			</div>
+			<script th:inline="javascript">
+			/*<![CDATA[*/
+				$(document).ready(function() {
+					var table = $('#comitato-table').DataTable();
+					function checkRemove() {
+						if (table.rows().count() >= 6) 
+							table.column(3).visible(true);
+						else
+							table.column(3).visible(false);
+					}
+					console.log(table.rows().count());
+					checkRemove();
+				});
+			/*]]>*/	
+			</script>
 		</div>
 	</div>
 </body>
