disabilitato il pulsante per rimuovere il coordinatore

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -160,8 +160,7 @@ table.datatable-responsive-form thead .sorting_asc:after {
 	text-align: center;
 }
 
-.form-disabled-text {
+.disabled {
 	cursor: not-allowed;
-	background-color: #eee;
 	color: #bbb;
 }
