Corretto Bug in PersonaController (solita questione editId).
Oltre a editId si passa anche anagraficaId, in quanto c'è la possibilità
di sostituire l'anagrafica alle persone. Un bug portava alla
duplicazione di un'anagrafica nel caso in cui si creava una nuova
persona agganciando da lookUp un'anagrafica esistente.

--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -214,6 +214,7 @@
 														<div class="clearfix"></div>
 													</div>
 													<div class="x_content">
+														<div th:unless="${accreditamentoWrapper.comitatoScientificoStato}" th:text="#{${accreditamentoWrapper.comitatoScientificoErrorMessage}}" class="alert alert-error"></div>
 														<table id="comitato-table" class="datatable-responsive-componenti-comitato table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
