--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -69,6 +69,21 @@
 							<input type="hidden" name="editIdFileDelega" th:value="${personaWrapper.delega.id}" />
 							 -->
 							 
+							<!-- checkbox flag straniero -->
+							<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
+										${personaWrapper.persona.componenteComitatoScientifico}"
+								class="item form-group">
+								<label class="control-label col-xs-1"></label>
+								<label class="control-label col-md-3 col-sm-3 col-xs-11"
+									for="isCoordinatore_comitato"><span th:text="#{label.is_coordinatore}">Inserisci come Coordinatore del Comitato Scientifico</span></label>
+								<div class="col-md-4 col-sm-4 col-xs-12">
+									<div class="checkbox">
+										<input id="isCoordinatore_comitato" name="isCoordinatore_comitato" 
+											class="flat" type="checkbox" th:checked="${personaWrapper.persona.coordinatoreScientifico}" />
+									</div>
+								</div>
+							</div> 
+							 							 
 							<!-- cognome -->
 							<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')} ? 'bad'">
 								<label class="control-label col-xs-1" th:text="${++counter}">1</label>
@@ -141,11 +156,11 @@
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="isStraniero_persona"><span th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span> <span class="required">*</span></label>
 								<div class="col-md-4 col-sm-4 col-xs-12">
-									<input id="isStraniero_persona" name="isStraniero_persona" 
-										class="form-control col-md-7 col-xs-12"
-										type="checkbox" th:checked="${personaWrapper.persona.anagrafica.isStraniero}" />
+									<div class="checkbox">
+										<input id="isStraniero_persona" name="isStraniero_persona" 
+											class="flat" type="checkbox" th:checked="${personaWrapper.persona.anagrafica.isStraniero}" />
+									</div>
 								</div>
-								<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.codiceFiscale}"></div>
 							</div>
 							
 							<!-- telefono -->
