modifica accreditamentoShow, aggiunta class css disabled

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -161,6 +161,10 @@ table.datatable-responsive-form thead .sorting_asc:after {
 }
 
 .disabled {
-	cursor: not-allowed;
+	cursor: not-allowed !important;
 	color: #bbb;
+}
+
+.label-disabled {
+	cursor: not-allowed !important;
 }
