--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -73,13 +73,12 @@
 							<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
 										${personaWrapper.persona.componenteComitatoScientifico}"
 								class="item form-group">
-								<label class="control-label col-xs-1"></label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
+								<label class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="isCoordinatore_comitato"><span th:text="#{label.is_coordinatore}">Inserisci come Coordinatore del Comitato Scientifico</span></label>
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<div class="checkbox">
 										<input id="isCoordinatore_comitato" name="isCoordinatore_comitato" 
-											class="flat" type="checkbox" th:checked="${personaWrapper.persona.coordinatoreScientifico}" />
+											class="flat" type="checkbox" th:checked="${personaWrapper.persona.coordinatoreComitatoScientifico}" />
 									</div>
 								</div>
 							</div> 
@@ -152,15 +151,24 @@
 							<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
 										${personaWrapper.persona.componenteComitatoScientifico}"
 								class="item form-group">
-								<label class="control-label col-xs-1"></label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
+								<label class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="isStraniero_persona"><span th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span> <span class="required">*</span></label>
-								<div class="col-md-4 col-sm-4 col-xs-12">
-									<div class="checkbox">
-										<input id="isStraniero_persona" name="isStraniero_persona" 
-											class="flat" type="checkbox" th:checked="${personaWrapper.persona.anagrafica.isStraniero}" />
+								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, counter)}">
+									<div class="col-md-4 col-sm-4 col-xs-12">
+										<div class="checkbox">
+											<input id="isStraniero_persona" name="isStraniero_persona" 
+												class="flat" type="checkbox" th:checked="${personaWrapper.persona.anagrafica.straniero}" />
+										</div>
 									</div>
-								</div>
+								</th:block>
+								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, counter)}">
+									<div class="col-md-4 col-sm-4 col-xs-12">
+										<div class="checkbox">
+											<input id="isStraniero_persona" name="isStraniero_persona" disabled="disabled"
+												class="flat" type="checkbox" th:checked="${personaWrapper.persona.anagrafica.straniero}" />
+										</div>
+									</div>
+								</th:block>
 							</div>
 							
 							<!-- telefono -->
