--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -249,6 +249,7 @@
 																</tr>
 															</tbody>
 														</table>
+														<button th:text="#{aggiungi_componente}" class="btn btn-primary with-margin-top" onclick="aggiungiRiga"></button>
 													</div>
 												</div>
 											</div>
