--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -11,7 +11,10 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.dati_attività}">Dati relativi all’attività</h2>
-						<a class="btn btn-primary pull-right" th:text="#{label.annulla}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
+						<th:block th:unless="${#lists.isEmpty(datiAccreditamentoWrapper.idEditabili)}">
+							<button class="btn btn-primary pull-right" th:text="#{label.salva}" form="formAccreditamento" type="submit"></button>
+						</th:block>
+						<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
@@ -420,11 +423,6 @@
 							
 							<!-- allegato 4 (funzionigramma) -->
 							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, funzionigramma, ${++counter}, null)" ></th:block>
-							
-							<!-- Registra Dati Accreditamento -->
-							<div class="item form-group text-right">
-								<input class="btn btn-primary right" type="submit" th:value="#{label.salva}"/>
-							</div>
 						</form>
 					</div>
 				</div>
