--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -12,7 +12,7 @@
 			<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span><span th:if="${note == null}" class="required">*</span>
 			<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
 		</label>
-		<th:block th:if="${#lists.contains(__${wrapper}__.idEditabili, counter)}">
+		<th:block th:if="${#lists.contains(__${wrapper}__.idEditabili, counter) or counter == null}">
 			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="form-control col-md-7 col-xs-12 btn" th:unless="${__${wrapper}__.__${tipoAllegato}__.data}">
 					<input type="file" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 		</th:block>
-		<th:block th:unless="${#lists.contains(__${wrapper}__.idEditabili, counter)}">
+		<th:block th:unless="${#lists.contains(__${wrapper}__.idEditabili, counter) or counter == null}">
 			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="allegato-label"><a th:id="__${tipoAllegato}___disabled" class="form-control form-disabled-text clickable left-align col-md-7 col-xs-12"
 					th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
