--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -243,13 +243,16 @@
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.cognome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
-																	<td>
-																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/remove|}"><span class="fa fa-trash"></span></a>
+																	<td th:unless="${componente.new}">
+																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash"></span></a>
+																	</td>
+																	<td th:if="${componente.new}">
+																		<a><span class="fa fa-trash disabled"></span></a>
 																	</td>
 																</tr>
 															</tbody>
 														</table>
-														<button th:text="#{aggiungi_componente}" class="btn btn-primary with-margin-top" onclick="aggiungiRiga"></button>
+														<button th:if="${accreditamentoWrapper.comitatoScientificoEditabile}" th:text="#{label.aggiungi_componente}" class="btn btn-primary with-margin-top" onclick="aggiungiComponente()"></button>
 													</div>
 												</div>
 											</div>
@@ -350,19 +353,35 @@
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
+			     
+			           
 				$(document).ready(function() {
+					var table = $('#comitato-table').DataTable();     
+					
 					if ([[${currentTab}]] != null && [[${currentTab}]] != "tab1")
 						$('#'+[[${currentTab}]]).tab('show');
 					
-					var table = $('#comitato-table').DataTable();
 					function checkRemove() {
 						if (table.rows().count() >= 6) 
 							table.column(3).visible(true);
 						else
 							table.column(3).visible(false);
 					}
-					console.log(table.rows().count());
-					checkRemove();
+					
+					function aggiungiComponente() {
+						var nd = [[#{label.nd}]];
+						var componente = [[#{label.componente_comitato}]];
+						table.row.add([
+							'<td><a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}">'+ componente +'</a></td>',
+							'<td>'+ nd +'</td>',
+							'<td>'+ nd +'</td>',
+							'<td>							\
+								<a><span class="fa fa-trash disabled"></span></a>	\
+							</td>'
+						]).draw(false);
+					}
+					
+					checkRemove();				
 				});
 			/*]]>*/	
 			</script>
