--- a/src/main/resources/templates/segreteria/uploadModelli.html
+++ b/src/main/resources/templates/segreteria/uploadModelli.html
@@ -12,7 +12,7 @@
 						<div class="x_title">
 							<h2 th:text="#{label.modelli_allegato}">label.modifica_modelli</h2>
 							<button class="btn btn-primary pull-right" th:text="#{label.salva}" form="formModelli" type="submit"></button>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/segreteria|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
 							<div class="clearfix"></div>
 						</div>
 					<div class="x_content">
