--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -243,16 +243,13 @@
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.cognome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
-																	<td th:unless="${componente.new}">
+																	<td>
 																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash"></span></a>
-																	</td>
-																	<td th:if="${componente.new}">
-																		<a><span class="fa fa-trash disabled"></span></a>
 																	</td>
 																</tr>
 															</tbody>
 														</table>
-														<button th:if="${accreditamentoWrapper.comitatoScientificoEditabile}" th:text="#{label.aggiungi_componente}" class="btn btn-primary with-margin-top" onclick="aggiungiComponente()"></button>
+														<a th:text="#{label.aggiungi_componente}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}"></a>
 													</div>
 												</div>
 											</div>
@@ -353,36 +350,21 @@
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
-			     
-			           
 				$(document).ready(function() {
-					var table = $('#comitato-table').DataTable();     
-					
 					if ([[${currentTab}]] != null && [[${currentTab}]] != "tab1")
 						$('#'+[[${currentTab}]]).tab('show');
 					
+					var table = $('#comitato-table').DataTable();
 					function checkRemove() {
 						if (table.rows().count() >= 6) 
 							table.column(3).visible(true);
 						else
 							table.column(3).visible(false);
 					}
-					
-					function aggiungiComponente() {
-						var nd = [[#{label.nd}]];
-						var componente = [[#{label.componente_comitato}]];
-						table.row.add([
-							'<td><a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}">'+ componente +'</a></td>',
-							'<td>'+ nd +'</td>',
-							'<td>'+ nd +'</td>',
-							'<td>							\
-								<a><span class="fa fa-trash disabled"></span></a>	\
-							</td>'
-						]).draw(false);
-					}
-					
-					checkRemove();				
+					checkRemove();
 				});
+			
+			
 			/*]]>*/	
 			</script>
 		</div>
