--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -243,13 +243,16 @@
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.cognome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
-																	<td>
+																	<td th:unless="${componente.new}">
 																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash"></span></a>
+																	</td>
+																	<td th:if="${componente.new}">
+																		<a><span class="fa fa-trash disabled"></span></a>
 																	</td>
 																</tr>
 															</tbody>
 														</table>
-														<a th:text="#{label.aggiungi_componente}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}"></a>
+														<a th:if="${accreditamentoWrapper.comitatoScientificoEditabile}" th:text="#{label.aggiungi_componente}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=COMPONENTE_COMITATO_SCIENTIFICO|}"></a>
 													</div>
 												</div>
 											</div>
@@ -363,8 +366,6 @@
 					}
 					checkRemove();
 				});
-			
-			
 			/*]]>*/	
 			</script>
 		</div>
