--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -220,7 +220,8 @@
 																<tr>
 																	<th th:text="#{label.componenti_comitato_scientifico}">Componenti Comitato Scientifico</th>
 																	<th th:text="#{label.nome}">Nome</th>
-																	<th th:text="#{label.cognome}"></th>																	
+																	<th th:text="#{label.cognome}"></th>
+																	<th th:text="#{label.professione}"></th>																	
 																	<th th:text="#{label.rimuovi}">Rimuovi</th>
 																</tr>
 															</thead>
@@ -232,6 +233,8 @@
 																	<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
 																	<td	th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="${accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.cognome}"></td>
 																	<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
+																	<td	th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="${accreditamentoWrapper.coordinatoreComitatoScientifico.professione.nome}"></td>
+																	<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
 																	<td>
 																		<a><span class="fa fa-trash disabled"></span></a>
 																	</td>
@@ -242,6 +245,8 @@
 																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.nome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td	th:unless="${componente.new}" th:text="${componente.anagrafica.cognome}"></td>
+																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
+																	<td	th:unless="${componente.new}" th:text="${componente.professione.nome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td th:unless="${componente.new}">
 																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash"></span></a>
@@ -363,9 +368,9 @@
 					
 					function checkRemove() {
 						if (table.rows().count() >= 6) 
-							table.column(3).visible(true);
+							table.column(4).visible(true);
 						else
-							table.column(3).visible(false);
+							table.column(4).visible(false);
 					}
 					
 					function aggiungiComponente() {
