--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -71,65 +71,6 @@
 										</div>
 										<div th:if="${#fields.hasErrors('provider.account.email')}" class="alert" th:errors="*{provider.account.email}"></div>	
 									</div>
-									
-									<!-- denominazione legale -->
-									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.denominazioneLegale')} ? 'bad'">
-										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="denominazioneLegale">
-											<span class="required" th:text="#{label.denominazione_legale}">label.denominazione_legale</span>
-											<span class="required">*</span>
-										</label>
-										<div class="col-md-6 col-sm-6 col-xs-12">
-											<input type="text" id="denominazioneLegale" name="denominazioneLegale" th:field="*{provider.denominazioneLegale}"
-												required="required" class="form-control col-md-7 col-xs-12" />
-										</div>
-										<div th:if="${#fields.hasErrors('provider.denominazioneLegale')}" class="alert" th:errors="*{provider.denominazioneLegale}"></div>
-									</div>
-
-									<!-- tipo organizzatore -->
-									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.tipoOrganizzatore')} ? 'bad'">
-				                      <label class="control-label col-md-3 col-sm-3 col-xs-12">
-				                      	<span class="required" th:text="#{label.tipo_organizzatore}">label.tipo_organizzatore</span>
-				                      	<span class="required">*</span>
-				                      </label>
-				                      <div class="col-md-6 col-sm-6 col-xs-12">
-				                        <select class="form-control required" th:field="*{provider.tipoOrganizzatore}">
-				                          <option value="" th:text="#{label.seleziona}">label.seleziona</option>
-				                          <option th:each="tipo : ${tipoOrganizzatoreList}" th:value="${tipo}" th:text="${tipo.nome}">Choose option</option>
-				                        </select>
-				                      </div>
-				                      <div th:if="${#fields.hasErrors('provider.tipoOrganizzatore')}" class="alert" th:errors="*{provider.tipoOrganizzatore}"></div>
-				                    </div>
-									
-									<!-- partita iva -->
-									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.partitaIva')} ? 'bad'">
-										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="pIva">
-											<span class="required"  th:text="#{label.partita_iva}">#{label.partita_iva}</span>
-											<span class="required">*</span>
-										</label>
-										<div class="col-md-6 col-sm-6 col-xs-12">
-											<input type="text" id="pIva" name="pIva" pattern='partitaIva' th:field="*{provider.partitaIva}"
-												required="required" class="form-control col-md-7 col-xs-12" />
-										</div>
-										<div th:if="${#fields.hasErrors('provider.partitaIva')}" class="alert" th:errors="*{provider.partitaIva}"></div>
-									</div>
-									
-									<!-- codicefiscale -->
-									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.codiceFiscale')} ? 'bad'">
-										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="pIva">
-											<span class="required"  th:text="#{label.codice_fiscale}">#{label.codice_fiscale}</span>
-											<span class="required">*</span>
-										</label>
-										<div class="col-md-6 col-sm-6 col-xs-12">
-											<input type="text" id="codiceFiscale" name="codiceFiscale" pattern='codiceFiscale' th:field="*{provider.codiceFiscale}"
-												required="required" class="form-control col-md-7 col-xs-12" />
-										</div>
-										<div th:if="${#fields.hasErrors('provider.codiceFiscale')}" class="alert" th:errors="*{provider.codiceFiscale}"></div>
-									</div>
-									
-									<!-- Registra solo Provider -->
-									<div class="item form-group text-right">
-										<input class="btn btn-primary right" type="submit" name="saveTypeMinimal" value="minimal" th:value="*{provider.account.new} ? #{label.crea_account} : #{label.aggiorna_account}"/>
-									</div>
 								</div>
 								<div id="step-2" class="wizard_content" style="display: none;">
 									<!-- nome -->
@@ -169,19 +110,6 @@
 												required="required" class="form-control col-md-7 col-xs-12" />
 										</div>
 										<div th:if="${#fields.hasErrors('richiedente.anagrafica.codiceFiscale')}" class="alert" th:errors="*{richiedente.anagrafica.codiceFiscale}"></div>
-									</div>
-									
-									<!-- pec -->
-									<div class="item form-group" th:classappend="${#fields.hasErrors('richiedente.anagrafica.pec')} ? 'bad'">
-										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="pecRichiedente">
-											<span class="required" th:text="#{label.posta_elettronica_certificata}">label.posta_elettronica_certificata</span>
-											<span class="required">*</span>
-										</label>
-										<div class="col-md-6 col-sm-6 col-xs-12">
-											<input type="email" id="pecRichiedente" name="pecRichiedente" th:field="*{richiedente.anagrafica.pec}"
-												required="required" class="form-control col-md-7 col-xs-12" />
-										</div>
-										<div th:if="${#fields.hasErrors('richiedente.anagrafica.pec')}" class="alert" th:errors="*{richiedente.anagrafica.pec}"></div>
 									</div>
 									
 									<!-- incarico -->
@@ -304,9 +232,65 @@
 										<div th:if="${#fields.hasErrors('legale.anagrafica.pec')}" class="alert" th:errors="*{legale.anagrafica.pec}"></div>
 									</div>
 									
+									<div class="divider-dashed"></div>
+									
+									<!-- denominazione legale -->
+									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.denominazioneLegale')} ? 'bad'">
+										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="denominazioneLegale">
+											<span class="required" th:text="#{label.denominazione_legale}">label.denominazione_legale</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-md-6 col-sm-6 col-xs-12">
+											<input type="text" id="denominazioneLegale" name="denominazioneLegale" th:field="*{provider.denominazioneLegale}"
+												required="required" class="form-control col-md-7 col-xs-12" />
+										</div>
+										<div th:if="${#fields.hasErrors('provider.denominazioneLegale')}" class="alert" th:errors="*{provider.denominazioneLegale}"></div>
+									</div>
+
+									<!-- tipo organizzatore -->
+									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.tipoOrganizzatore')} ? 'bad'">
+				                      <label class="control-label col-md-3 col-sm-3 col-xs-12">
+				                      	<span class="required" th:text="#{label.tipo_organizzatore}">label.tipo_organizzatore</span>
+				                      	<span class="required">*</span>
+				                      </label>
+				                      <div class="col-md-6 col-sm-6 col-xs-12">
+				                        <select class="form-control required" th:field="*{provider.tipoOrganizzatore}">
+				                          <option value="" th:text="#{label.seleziona}">label.seleziona</option>
+				                          <option th:each="tipo : ${tipoOrganizzatoreList}" th:value="${tipo}" th:text="${tipo.nome}">Choose option</option>
+				                        </select>
+				                      </div>
+				                      <div th:if="${#fields.hasErrors('provider.tipoOrganizzatore')}" class="alert" th:errors="*{provider.tipoOrganizzatore}"></div>
+				                    </div>
+									
+									<!-- partita iva -->
+									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.partitaIva')} ? 'bad'">
+										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="pIva">
+											<span class="required"  th:text="#{label.partita_iva}">#{label.partita_iva}</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-md-6 col-sm-6 col-xs-12">
+											<input type="text" id="pIva" name="pIva" pattern='partitaIva' th:field="*{provider.partitaIva}"
+												required="required" class="form-control col-md-7 col-xs-12" />
+										</div>
+										<div th:if="${#fields.hasErrors('provider.partitaIva')}" class="alert" th:errors="*{provider.partitaIva}"></div>
+									</div>
+									
+									<!-- codicefiscale -->
+									<div class="item form-group" th:classappend="${#fields.hasErrors('provider.codiceFiscale')} ? 'bad'">
+										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="pIva">
+											<span class="required"  th:text="#{label.codice_fiscale}">#{label.codice_fiscale}</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-md-6 col-sm-6 col-xs-12">
+											<input type="text" id="codiceFiscale" name="codiceFiscale" pattern='codiceFiscale' th:field="*{provider.codiceFiscale}"
+												required="required" class="form-control col-md-7 col-xs-12" />
+										</div>
+										<div th:if="${#fields.hasErrors('provider.codiceFiscale')}" class="alert" th:errors="*{provider.codiceFiscale}"></div>
+									</div>
+									
 									<!-- Invia dati -->
 									<div class="item form-group text-right">
-										<input class="btn btn-primary right" type="submit" name="saveTypeFull" value="full" th:value="#{label.conferma}"/>
+										<input class="btn btn-primary right" type="submit" name="saveTypeFull" value="full" th:value="#{label.crea_account}"/>
 									</div>
 								</div>
 							</form>
