--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -161,7 +161,7 @@
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<div class="checkbox">
 											<input id="isStraniero_persona" name="isStraniero_persona" 
-												class="flat" type="checkbox" th:checked="${personaWrapper.persona.anagrafica.straniero}" />
+												class="flat" type="checkbox" th:field="${personaWrapper.persona.anagrafica.straniero}" />
 										</div>
 									</div>
 								</th:block>
